add user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://username:passwordcluster0.7ubfz.mongodb.net 
-CORS_ORIGIN = 
+CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = your secret
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = your secret
+REFRESH_TOKEN_EXPIRY = 10d
